# customer_reports

./: MANIFEST.in  README.md  __init__.py  app.json  apps.txt  hooks.py  index.js  modules.txt  package.json  pyproject.toml  requirements.txt  setup.py
customer_reports/: __init__.py  hooks.py
customer_reports/client_script/: customer.js
customer_reports/custom/customer/: customer_custom_fields.json
customer_reports/customer_reports/module-def/: customer_reports.json
customer_reports/customer_reports/report/customer_item_purchase_history/: customer_item_purchase_history.json  customer_item_purchase_history.py
customer_reports/public/js/: customer.js  customer_item_purchase_history.js
customer_reports/report/customer_item_purchase_history/: customer_item_purchase_history.js  customer_item_purchase_history.json  customer_item_purchase_history.py
report/customer_item_purchase_history/: customer_item_purchase_history.json  customer_item_purchase_history.py
